titulo "conoce a los oradores"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav id="head">
         <div class="row">
-          <div class="col-xl-5">
+          <div class="col-xl-4 offset-xl-1">
             <img src="./resources/images/codoacodo.png" alt="logoCodoaCodo" id="logoCodoacodo">
             <span id="conf">Conf Bs As</span>
           </div>
@@ -70,17 +70,17 @@
               <img src="./resources/images/ba3.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls"
-            data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselControls"
-            data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
           </button>
         </div>
       </div>
       <div id="oradores">
-        <h6>CONOCE A LOS</h6>
-        <h1>ORADORES</h1>
+        <div class="oradoresTitle">
+          <h6>CONOCE A LOS</h6>
+          <h2>ORADORES</h2>
+        </div>
       </div>
 
     </main>
