--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a class="nav-link" href="#oradores">Los oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">El lugar y la Fecha</a>
+                <a class="nav-link" href="#lugar">El lugar y la Fecha</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Convertite en orador</a>
+                <a class="nav-link" href="#serOrador">Convertite en orador</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" disabled="true">Comprar Tickets</a>
@@ -76,6 +76,7 @@
           </button>
         </div>
       </div>
+
       <div id="oradores">
         <div class="oradoresTitle">
           <h6>CONOCE A LOS</h6>
@@ -83,6 +84,75 @@
         </div>
       </div>
 
+      <div id="cards">
+        <div class="row justify-content-center">
+          <div class="col-md-3 card">
+            <img src="./resources/images/steve.jpg" class="oradorImg" alt="Steve Jobs">
+            <div class="detail">
+              <div>
+                <span class="badge bg-warning text-dark">JavaScript</span>
+                <span class="badge bg-info text-dark">React</span>
+              </div>
+              <h4>Steve Jobs</h4>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae qui adipisci nulla, soluta voluptatum
+              repellendus commodi nam esse quo rerum voluptas quaerat impedit ducimus at laboriosam aperiam quod.
+              Magnam, quibusdam!
+            </div>
+          </div>
+          <div class="col-md-3 card">
+            <img src="./resources/images/bill.jpg" class="oradorImg" alt="bill gates">
+            <div class="detail">
+              <div>
+                <span class="badge bg-warning text-dark">JavaScript</span>
+                <span class="badge bg-info text-dark">React</span>
+              </div>
+              <h4>Bill Gates</h4>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae qui adipisci nulla, soluta voluptatum
+              repellendus commodi nam esse quo rerum voluptas quaerat impedit ducimus at laboriosam aperiam quod.
+              Magnam, quibusdam!
+            </div>
+          </div>
+          <div class="col-md-3 card">
+            <img src="./resources/images/ada.jpeg" class="oradorImg" alt="Ada Lovelace">
+            <div class="detail">
+              <div>
+                <span class="badge bg-secondary">Negocios</span>
+                <span class="badge bg-danger">Startups</span>
+              </div>
+              <h4>Ada Lovelace</h4>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae qui adipisci nulla, soluta voluptatum
+              repellendus commodi nam esse quo rerum voluptas quaerat impedit ducimus at laboriosam aperiam quod.
+              Magnam, quibusdam!
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="lugar">
+        <div class="row ">
+          <div class="col-md-6">
+            <img src="./resources/images/honolulu.jpg" class="oradorImg" alt="Ada Lovelace">
+          </div>
+          <div class="col-md-6 place">
+            <div class="description">
+              <h4>Bs As - Octubre</h4>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptas perspiciatis, nihil itaque consequatur, provident quod quas eum deleniti, tenetur ipsum! Corrupti ratione voluptas soluta nisi dolores animi ab esse!
+            </div>
+            
+          </div>
+        </div>
+      </div>
+
+      <div id="serOrador">
+        <div class="oradoresTitle">
+          <h6>CONVIÉRTETE EN UN</h6>
+          <h2>ORADOR</h2>
+        </div>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio amet beatae possimus officiis, maiores
+        laborum facilis pariatur quasi id nemo? Impedit aspernatur tempore minus quasi dignissimos numquam sint nisi
+        perferendis?
+      </div>
     </main>
     <footer>
 
