--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
           <div class="col-md-6 place">
             <div class="description">
               <h4>Bs As - Octubre</h4>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptas perspiciatis, nihil itaque consequatur, provident quod quas eum deleniti, tenetur ipsum! Corrupti ratione voluptas soluta nisi dolores animi ab esse!
+              Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos.  Honolulu es la más sureña de estre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa surestes de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600  km<sup>2</sup> de superficie).
+              <div class="moreButton">
+                <button class="btn btn-outline-light">Conocé más</button>
+              </div>
             </div>
-            
           </div>
         </div>
       </div>
