--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@
           <div class="col-md-6 place">
             <div class="description">
               <h4>Bs As - Octubre</h4>
-              Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos.  Honolulu es la más sureña de estre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa surestes de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600  km<sup>2</sup> de superficie).
+              Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos.
+              Honolulu es la más sureña de estre las principales ciudades estadounidenses. Aunque el nombre de Honolulu
+              se refiere al área urbana en la costa surestes de la isla de Oahu, la ciudad y el condado de Honolulu han
+              formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de
+              superficie).
               <div class="moreButton">
                 <button class="btn btn-outline-light">Conocé más</button>
               </div>
@@ -149,11 +153,11 @@
         <div class="oradoresTitle">
           <h6>CONVIÉRTETE EN UN</h6>
           <h2>ORADOR</h2>
+          Anótate como orador para dar una <span class="dotted">charla ignite</span>. Cuéntanos de qué quieres hablar!
         </div>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id sint sunt itaque quis accusamus ipsam commodi earum
+        enim doloremque tenetur, ut ratione quaerat, iure vitae distinctio asperiores modi atque quia.
 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio amet beatae possimus officiis, maiores
-        laborum facilis pariatur quasi id nemo? Impedit aspernatur tempore minus quasi dignissimos numquam sint nisi
-        perferendis?
       </div>
     </main>
     <footer>
