--- a/index.html
+++ b/index.html
@@ -155,9 +155,30 @@
           <h2>ORADOR</h2>
           Anótate como orador para dar una <span class="dotted">charla ignite</span>. Cuéntanos de qué quieres hablar!
         </div>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id sint sunt itaque quis accusamus ipsam commodi earum
-        enim doloremque tenetur, ut ratione quaerat, iure vitae distinctio asperiores modi atque quia.
 
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <input type="text" class="form-control" id="firstName" placeholder="Nombre">
+          </div>
+          <div class="col-md-3">
+            <input type="text" class="form-control" id="lastName" placeholder="Apellido">
+          </div>
+
+          <div class="row justify-content-center textArea">
+            <div class="col-md-6">
+              <textarea class="form-control" placeholder="Sobre qué quieres hablar?" id="textArea"
+                style="height: 100px"></textarea>
+              <label for="textArea">
+                Recuerda incluir un titulo para tu charla
+              </label>
+            </div>
+          </div>
+          <div class="col-md-6">
+          <div class="d-grid gap-2">
+            <button class="btn btn-success sendButton" type="button">Enviar</button>
+          </div>
+        </div>
+        </div>
       </div>
     </main>
     <footer>
