--- a/index.html
+++ b/index.html
@@ -174,15 +174,44 @@
             </div>
           </div>
           <div class="col-md-6">
-          <div class="d-grid gap-2">
-            <button class="btn btn-success sendButton" type="button">Enviar</button>
+            <div class="d-grid gap-2">
+              <button class="btn btn-success sendButton" type="button">Enviar</button>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </main>
     <footer>
-
+      <nav id="footer">
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <ul class="nav d-flex">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Preguntas Ferecuentes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contáctanos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Prensa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Conferencias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Terminos y Condiciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Privacidad</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Estudiantes</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        
+      </nav>
     </footer>
   </div>
 </body>
