--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>TP Integrador SCostilla</title>
 
   <!-- Bootstrap -->
-  <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
 
   <!-- CSS -->
   <link href="./resources/css/styles.css" rel="stylesheet">
