--- a/index.html
+++ b/index.html
@@ -209,10 +209,9 @@
             </ul>
           </div>
         </div>
-
+      <div class="copyright">.:: Sebastian R. Costilla - JAVA-FRONT END 2023 ::.</div>
       </nav>
     </footer>
   </div>
 </body>
-
 </html>
