--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./resources/css/bootstrap.min.js">
 
   <!-- CSS -->
   <link href="./resources/css/styles.css" rel="stylesheet">
@@ -53,7 +54,7 @@
             están creando el futuro de Internet. Ven a conocer a miembros del
             evento, a otros estudiantes de Codo a Codo y los oradores de primer
             nivel que tenemos para ti. Te esperamos!</p>
-          <button class="btn btn-outline-light">Quiero ser Orador</button>
+          <button class="btn btn-outline-light btnBlur">Quiero ser Orador</button>
           <button class="btn btn-success">Comprar Tickets</button>
         </div>
         <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
