--- a/buyTickets.html
+++ b/buyTickets.html
@@ -56,19 +56,19 @@
             <div class="row justify-content-center">
                 <div class="col-2 student text-center">
                     <h5>Estudiante</h5>
-                    Tiene un descuento de 
+                    Tiene un descuento de
                     <h6>80%</h6>
                     *presentar documentación
                 </div>
                 <div class="col-2 trainee text-center">
                     <h5>Trainee</h5>
-                    Tiene un descuento de 
+                    Tiene un descuento de
                     <h6>50%</h6>
                     *presentar documentación
                 </div>
                 <div class="col-2 junior text-center">
                     <h5>Junior</h5>
-                    Tiene un descuento de 
+                    Tiene un descuento de
                     <h6>15%</h6>
                     *presentar documentación
                 </div>
@@ -80,7 +80,21 @@
                 <h2>VALOR DE TICKET $200</h2>
             </div>
             <div class="row justify-content-center">
-                <H2>FORMULARIO</H2>
+                <form action="" class="text-center">
+                    <div class="row">
+                        <div class="col-3">
+                            <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Nombre">
+                        </div>
+                        <div class="col-3">
+                            <input type="text" class="form-control" id="lastName" aria-describedby="lastName" placeholder="Apellido">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo">
+                        </div>
+                    </div>
+                </form>
             </div>
         </main>
         <footer>
