--- a/buyTickets.html
+++ b/buyTickets.html
@@ -8,11 +8,10 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./resources/css/bootstrap.min.js">
     <script src="./resources/css/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-    <script src="./resources/css/bootstrap.bundle.min.js"
+    <script src="./resources/css/bootstrap.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
@@ -28,7 +27,8 @@
                     <div class="col-xl-2 offset-xl-1">
                         <a class="nav-link" href="./index.html">
                             <img src="./resources/images/codoacodo.png" alt="logoCodoaCodo" id="logoCodoacodo">
-                            <span id="conf">Conf Bs As</span></a>
+                            <span id="conf">Conf Bs As</span>
+                        </a>
                     </div>
                     <div class="col-xl-7 offset-xl-2">
                         <ul class="nav">
@@ -98,7 +98,7 @@
                             <input type="text" class="form-control" id="inputQuantity">
                         </div>
                         <div class="col-md-6">
-                            <label for="inputCategory" class="form-label">Categoria</label>
+                            <label for "inputCategory" class="form-label">Categoria</label>
                             <select id="inputCategory" class="form-select">
                                 <option value="student" selected>Estudiante</option>
                                 <option value="trainee">Trainee</option>
@@ -107,50 +107,50 @@
                         </div>
                         <div class="alert alert-primary" role="alert">
                             Total a pagar: $
-                          </div>
+                        </div>
                         <div class="col-12">
                             <div class="d-flex col-12">
                                 <button class="btn btn-success w-50" type="button">Borrar</button>
                                 <button class="btn btn-success w-50" type="button">Resumen</button>
                             </div>
                         </div>
-                </div>
-                </form>
-            </div>
-    </div>
-    </main>
-    <footer>
-        <nav id="footer">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <ul class="nav d-flex">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Preguntas Ferecuentes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contáctanos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Prensa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Conferencias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Terminos y Condiciones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Privacidad</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Estudiantes</a>
-                        </li>
-                    </ul>
+                    </form>
                 </div>
             </div>
-            <div class="copyright">.:: Sebastian R. Costilla - JAVA-FRONT END 2023 ::.</div>
-        </nav>
-    </footer>
+        </main>
+        <br>
+        <footer>
+            <nav id="footer">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <ul class="nav d-flex">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Preguntas Frecuentes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contáctanos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Prensa</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Conferencias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Términos y Condiciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Privacidad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Estudiantes</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">.:: Sebastian R. Costilla - JAVA-FRONT END 2023 ::.</div>
+            </nav>
+        </footer>
     </div>
 </body>
 
