--- a/buyTickets.html
+++ b/buyTickets.html
@@ -110,8 +110,8 @@
                         </div>
                         <div class="col-12">
                             <div class="d-flex col-12">
-                                <button class="btn btn-success w-50" type="button">Borrar</button>
-                                <button class="btn btn-success w-50" type="button">Resumen</button>
+                                <button class="btn btn-success w-50 formbtn btnDelete" type="button">Borrar</button>
+                                <button class="btn btn-success w-50 formbtn btnResume" type="button">Resumen</button>
                             </div>
                         </div>
                     </form>
