--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             están creando el futuro de Internet. Ven a conocer a miembros del
             evento, a otros estudiantes de Codo a Codo y los oradores de primer
             nivel que tenemos para ti. Te esperamos!</p>
-          <button class="btn btn-outline-light btnBlur">Quiero ser Orador</button>
-          <button class="btn btn-success">Comprar Tickets</button>
+            <a class="btn btn-outline-light btnBlur" href="#serOrador">Quiero ser Orador</a>
+
+          <a class="btn btn-success" href="./buyTickets.html">Comprar Tickets</a>
         </div>
         <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -221,6 +222,7 @@
       </nav>
     </footer>
   </div>
+  <script type="module" src="./resources/js/buyTickets.js"></script>
 </body>
 
 </html>
