--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       </nav>
     </footer>
   </div>
-  <script type="module" src="./resources/js/buyTickets.js"></script>
+  <script src="./resources/js/buyTickets.js"></script>
 </body>
 
 </html>
