--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             están creando el futuro de Internet. Ven a conocer a miembros del
             evento, a otros estudiantes de Codo a Codo y los oradores de primer
             nivel que tenemos para ti. Te esperamos!</p>
-            <a class="btn btn-outline-light btnBlur" href="#serOrador">Quiero ser Orador</a>
+          <a class="btn btn-outline-light btnBlur" href="#serOrador">Quiero ser Orador</a>
 
           <a class="btn btn-success" href="./buyTickets.html">Comprar Tickets</a>
         </div>
@@ -133,6 +133,11 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="row justify-content-center col-md-6 offset-md-3">
+          <a class="btn btn-success sendButton" type="button" href="./oradoresList.html">Listado Completo de Oradores</a>
+          <p></p>
       </div>
 
       <div id="lugar">
