--- a/ticketList.html
+++ b/ticketList.html
@@ -67,77 +67,21 @@
             </nav>
         </header>
         <main>
-            <div class="row justify-content-center">
-                <div class="col-2 student text-center">
-                    <h5>Estudiante</h5>
-                    Tiene un descuento de
-                    <h6>80%</h6>
-                    *presentar documentación
-                </div>
-                <div class="col-2 trainee text-center">
-                    <h5>Trainee</h5>
-                    Tiene un descuento de
-                    <h6>50%</h6>
-                    *presentar documentación
-                </div>
-                <div class="col-2 junior text-center">
-                    <h5>Junior</h5>
-                    Tiene un descuento de
-                    <h6>15%</h6>
-                    *presentar documentación
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                VENTA
-            </div>
-            <div class="row justify-content-center text-center">
-                <h2>VALOR DE TICKET $200</h2>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <form class="row g-3">
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" id="firstName" aria-describedby="name"
-                                placeholder="Nombre">
-                        </div>
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" id="lastName" aria-describedby="lastName"
-                                placeholder="Apellido">
-                        </div>
-                        <div class="col-12">
-                            <input type="email" class="form-control" id="mail" placeholder="Correo">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="inputQuantity" class="form-label">Cantidad</label>
-                            <input type="number" class="form-control" id="inputQuantity">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="inputCategory" class="form-label">Categoria</label>
-                            <select id="inputCategory" class="form-select">
-                                <option value="student" selected>Estudiante</option>
-                                <option value="trainee">Trainee</option>
-                                <option value="junior">Junior</option>
-                            </select>
-                        </div>
-                        <div class="alert alert-primary" role="alert" id="total">
-                            <!-- total a pagar - aparece cuando el total es mayor a cero -->
-                        </div>
-                        <div class="col-12">
-                            <div class="d-flex col-12">
-                                <button class="btn btn-success w-50 formbtn btnDelete" type="button"
-                                    onclick="clearForm()">Borrar</button>
-                                <button class="btn btn-success w-50 formbtn btnResume" type="button"
-                                    onclick="calculateTotal()">Resumen</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <p></p>
-            <div class="row justify-content-center col-md-6 offset-md-3">
-                <a class="btn btn-success sendButton" type="button" href="./ticketList.html">Tickets vendidos</a>
-                <p></p>
-            </div>
+            <h1>Listado de Tickets Vendidos</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Cantidad</th>
+                        <th>Categoría</th>
+                    </tr>
+                </thead>
+                <tbody id="tbodyTickets">
+                    <!-- Las filas de la tabla se agregarán aquí dinámicamente -->
+                </tbody>
+            </table>
         </main>
         <br>
         <footer>
@@ -173,7 +117,7 @@
             </nav>
         </footer>
     </div>
-    <script src="./resources/js/buyTickets.js"></script>
+    <script src="./resources/js/ticketList.js"></script>
 </body>
 
 </html>
