--- a/oradoresList.html
+++ b/oradoresList.html
@@ -67,7 +67,14 @@
             </nav>
         </header>
         <main>
-            <h1>Tabla de oradores</h1>
+            <div id="oradores">
+                <div class="oradoresTitle">
+                  <h6>LISTADO DE </h6>
+                  <h2>ORADORES INSCRIPTOS</h2>
+                </div>
+              </div>
+              <div class="row justify-content-center col-md-8 offset-md-2">
+              <P></P>
             <table id="tablaOradores" class="table">
                 <thead>
                     <tr>
@@ -80,6 +87,7 @@
                     <!-- Las filas de la tabla se agregarán aquí dinámicamente -->
                 </tbody>
             </table>
+        </div>
         </main>
         <br>
         <footer>
