--- a/ticketList.html
+++ b/ticketList.html
@@ -67,7 +67,15 @@
             </nav>
         </header>
         <main>
-            <h1>Listado de Tickets Vendidos</h1>
+            <div id="oradores">
+                <div class="oradoresTitle">
+                  <h6>LISTADO DE </h6>
+                  <h2>TICKETS VENDIDOS</h2>
+                </div>
+              </div>
+
+              <div class="row justify-content-center col-md-8 offset-md-2">
+                <P></P>
             <table class="table">
                 <thead>
                     <tr>
@@ -82,6 +90,7 @@
                     <!-- Las filas de la tabla se agregarán aquí dinámicamente -->
                 </tbody>
             </table>
+            </div>
         </main>
         <br>
         <footer>
